# DynCreater

./: .gitignore  BunnyAnimated.gltf  DynCreater.sln
AnimDyn/: CMakeLists.txt
AnimDyn/include/: Camera.h  Engine.h  Light.h  Mathril.h  Mesh.h  MeshAnimated.h  ObjectAnimated.h  ObjectRendererAnimated.h  Projection.h  ShaderProgram.h  Texture.h  Win.h  util.h
AnimDyn/include/glad/: glad.h
AnimDyn/shaders/: objectsAnimated.fs  objectsAnimated.vs
AnimDyn/source/: Camera.cpp  Engine.cpp  Light.cpp  Mathril.cpp  Mesh.cpp  MeshAnimated.cpp  ObjectAnimated.cpp  ObjectRendererAnimated.cpp  Projection.cpp  ShaderProgram.cpp  Texture.cpp  Win.cpp  dynmain.cpp  glad.c  util.cpp  viewerMain.cpp
DynCreater/: Animations.cpp  Animations.h  CMakeLists.txt  ColladaParser.cpp  ColladaParser.h  DynCreater.vcxproj  DynCreater.vcxproj.filters  MIndexTree.cpp  MIndexTree.h  Main.cpp  Mathematics.cpp  Mathematics.h  Matrix4f.cpp  Matrix4f.h  Quaternion.cpp  Quaternion.h  SW.dyn  SW_idle.dae  Vector3f.cpp  Vector3f.h  Vector4f.cpp  Vector4f.h  cowBoyOld.dyn  mushroom.dyn  mushroom_melee.dae  mushroom_ranged.dae
DynCreater/dae/: Skeletor_cast.dae  cowBoyOld_dance.dae  cowBoyOld_walk.dae  dummy_jump.dae  go_blend.dae  go_opengl.dae  hero_dance.dae  hero_walk.dae  kankalRaj_dance.dae  kankalRaj_idle.dae  kankalRaj_walk.dae  robo_jump.dae
DynCreater/dyn/: Skeletor.dyn  cowBoyOld.dyn  dummy.dyn  hero.dyn  kankal.dyn  kankalRaj.dyn  mushroom.dyn  robo.dyn  sym.dyn  test.dyn
DynCreater/include/: Convertor.h  Mathril.h
DynCreater/source/: Convertor.cpp  Mathril.cpp  main.cpp
StaCreator/: makefile
StaCreator/inc/: Algebra.h  Loader.h  MIndexTree.h
StaCreator/src/: Algebra.cpp  GltfLoader.cpp  Loader.cpp  MIndexTree.cpp  staMaker.cpp
StcCreator/: CMakeLists.txt  makefile
StcCreator/inc/: GltfLoader.h  Loader.h  MIndexTree.h
StcCreator/include/: Algebra.h  MIndexTree.h
StcCreator/inputs/: bike.gltf
StcCreator/outputs/: bike.stc
StcCreator/source/: Algebra.cpp  GltfLoader.cpp  Loader.cpp  MIndexTree.cpp  stcMaker.cpp
StcCreator/src/: GltfLoader.cpp
